syntax = "proto3";

option go_package = "proto/";

message AnimalShelter {
    string address = 1;
    string phone_number = 2;
    repeated Animal animals = 3;
    repeated Employee employees = 4;
}

message Animal {
    string name = 1;
    int64 age = 2;
    float weight = 3;
}

message Employee {
    string first_name = 1;
    string second_name = 2;
    optional int64 manager = 3;
    repeated string hobbies = 4;
}
